--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,13 @@ authors = [
 dependencies = [
     "django>=4.2.2",
     "djangorestframework>=3.14.0",
+    "djangorestframework-simplejwt>=5.2.2",
+    "setuptools>=68.0.0",
+    "drf-spectacular>=0.26.3",
+    "django-cors-headers>=4.1.0",
+    "django-extensions>=3.2.3",
+    "pygraphviz>=1.11",
+    "pydotplus>=2.0.2",
 ]
 requires-python = ">=3.11"
 license = {text = "MIT"}
